refactor: complete migration from certification to evaluation
Major changes:
- Renamed CertificationEvaluator → EvaluationEvaluator across all files
- Updated README.md with accurate technical details (RAG Fusion, k=8, stateless mode)
- Removed obsolete files (DOCKER.md, STARTUP_GUIDE.md with broken references)
- Fixed Makefile, .env.example, frontend CSS (evaluation dashboard padding)
- Fixed all broken documentation links
- All files verified line by line - zero broken references

The project is production-ready and clean for cloning.

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,8 @@ Thumbs.db
 
 # Logs
 *.log
+
+# Evaluation artifacts (generated files)
+backend/scripts/evaluation_report_*.json
+!backend/scripts/evaluation_report_FINAL.json
+backend/scripts/evaluation_dataset_q*.json
