--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
 # Anthropic API Key (required)
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
 
+# Tavily API Key (optional - for web search)
+TAVILY_API_KEY=your_tavily_api_key_here
+
 # Optional: LangSmith tracing
 LANGCHAIN_TRACING_V2=false
 LANGCHAIN_API_KEY=your_langsmith_api_key_here
-LANGCHAIN_PROJECT=adaptive-rag
+LANGCHAIN_PROJECT=intelligent-rag-evaluation
